--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="medium-8 columns name-div">
                     <input type="text" class="node_name" name="name" placeholder="Enter name of Page">
-                    <label class="node_name_empty hide" style="color:red">Please enter Name</label> 
+                    <label class="node_name_empty hide" style="color:red">Please enter Name</label>
                 </div>
                 <div class="medium-4 columns">
                     <a class="right orange-button-template existing-template">Create page from existing template</a>
@@ -26,7 +26,7 @@
                     {% include "ndf/html_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value="" ckeditor_toolbar="GeneralToolbar" %}
                     {% endif %}
                 </div>
-                
+
             </div>
             <input type="hidden" name="node_id" class="form_node_id">
             {% if editor_view %}
@@ -51,7 +51,7 @@
 
 <div id="page_listing">
 
-<div class="row"> 
+<div class="row">
     {% for each in all_pages %}
         <a class="view-page" data-page-id="{{each.pk}}" data-node-name="{{each.name}}" title="{{each.name}}">
             <div class="small-12 medium-6 large-3 columns">
@@ -67,7 +67,7 @@
                     </div>
                     <div class="asset_text">
                         <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:25}}</div>
-                        <div class="asset_desc">{{each.content|striptags|truncatechars:35}}</div>
+                        <div class="asset_desc">{{each.content|safe|striptags|truncatechars:35}}</div>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     {% endfor %}
 </div></div>
 <script type="text/javascript">
-    
+
     $(document).ready(function(){
         {% if editor_view %}
             load_inline_content_editor("{{node_obj.pk}}","{{node_obj.name}}")
