--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
@@ -14,7 +14,7 @@
             </div>
             <div class="asset_text">
                 <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:35}}</div>
-                <div class="asset_desc">{{each.content|truncatechars:35}}</div>
+                <div class="asset_desc">{{each.content|safe|truncatechars:35}}</div>
             </div>
         </div>
     </div>
