ndf tag parameter modified

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/static/ndf/bower_components/videojs/dist/video.min.js"></script>
 <script type="text/javascript" src="/static/ndf/bower_components/videojs/dist/video.js"></script>
 
-	  {% get_relation_node video_obj.pk  as subtitle_rel_node %}
+	  {% get_relation_node video_obj.pk  'has_subtitle' as subtitle_rel_node %}
 
 <div id="scstyle">
 
