--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -44,7 +44,7 @@
                 </div>
 
                         <label><u>Language</u></label>
-                          <select  style="display: none;" class="select-language" name="lan" id="sub_languageid" tabindex=3 >
+                          <select  style="display: none;" class="select-subtitle-langauge" name="lan" id="sub_languageid" tabindex=3 >
                             <option value="">--- Select Language ---</option>
                             {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
@@ -57,6 +57,10 @@
                     <button type="button" class="right orange-button-subtitle save-subtitle" style="display: none;" onclick="save_subtitle()">Add Subtitle</button></div>
                    <!-- <input type="asset-save-button" id="" class="orange-button" onclick="save_asset_cont_data()" value="Save"/>-->
                 </div>
+                
+                {% get_relation_node node.pk  'has_alt_content' as alt_lang_rel_node %}
+                {{alt_lang_rel_node}}
+                
               {%  endif %}
             {%  endif %}
             
@@ -64,6 +68,69 @@
         </div>
             
         </div>
+          {% get_gstudio_alt_opts as alt_opts %}
+        {% if 'video' in node.if_file.mime_type %}
+          {% get_gstudio_alt_size 'video' as size_types %}
+          {% get_gstudio_alt_file_formats  'video' as format_types %}
+        {% endif %}
+        <div class="subtitle_files">
+                  <label><u>Upload Alternate File</u></label>
+                    <form class="dropzone" id ="docalternate" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
+                        <input class="alternate-file" type="file" id="docalternatefile" placeholder="" name="doc_altf" />
+                        <br>
+                    </form>
+                </div>                          
+                    <div class="row">
+                    <button type="button" class="right orange-button-subtitle save-altfile" onclick="save_alternate_file()">Add alternate file</button></div>
+                   <!-- <input type="asset-save-button" id="" class="orange-button" onclick="save_asset_cont_data()" value="Save"/>-->
+                </div>
+         <select   class="select-language" name="lan" id="alt_types" tabindex=3 >
+                            <option value="">--- Select Alternate Type ---</option>
+                     {% for each_alt_types in alt_opts %}
+
+                            <option data-opts="{{each_alt_types}}" >
+                              {{ each_alt_types }}
+                            </option>
+                            {% endfor %}
+          </select>
+
+          <div class="alt-langauge-area" style="display: none">   
+            <select   class="select-language alt-langauge" name="lan" id="alt_languageid" tabindex=3 >
+                              <option value="">--- Select Language ---</option>
+                              {% get_language_info_list for LANGUAGES as languages %}
+                              {% for language in languages %}
+                              <option data-sub-lang="{{ language.name }}" data-sub-code="{{ language.code }}">
+                                {{ language.name }}
+                              </option>
+                              {% endfor %}
+            </select>
+          </div>
+
+          <div class="alt-fr-type" style="display: none">
+            <select class="select-language alt-fr-type" name="lan" id="" tabindex=3 >
+                            <option value="">--- Select Format ---</option>
+                        {% for each_fr_type in format_types %}
+
+                            <option data-opts = "{{each_fr_type}}">
+                              {{ each_fr_type }}
+                            </option>
+                            {% endfor %}
+            </select>
+          </div>
+
+          <div class="alt-size-area" style="display: none">
+            <select class="select-language alt-size-type" name="lan" id="" tabindex=3 >
+                            <option value="">--- Select sizes ---</option>
+                        {% for each_fr_type in size_types %}
+
+                            <option data-opts = "{{each_fr_type}}">
+                              {{ each_fr_type }}
+                            </option>
+                            {% endfor %}
+            </select>
+          </div>
+
+
 
      {% get_relation_value node.pk 'has_subtitle' as grel_sub %}
      {% for each in grel_sub.grel_node %}
@@ -82,11 +149,39 @@ $("#doctranscript").change(function(){
         $(".save-transcript").css('display','block')
     });
 $("#docsubtitle").change(function(){
-        $(".select-language").css('display','block')
+        $(".select-subtitle-langauge").css('display','block')
     });
 
-$(".select-language").change(function(){
+$(".select-subtitle-langauge").change(function(){
         $(".save-subtitle").css('display','block')
+    });
+
+$("#alt_types").change(function(){
+    sel_alt_types =  $('#alt_types').find(':selected').attr('data-opts');
+    if(sel_alt_types == "Language"){
+        $(".alt-langauge-area").css('display','block')
+      
+    }else{
+      
+        $(".alt-langauge-area").css('display','none')
+    }
+
+    if(sel_alt_types == "Format"){
+        $(".alt-fr-type").css('display','block')
+      
+    }else{
+      
+        $(".alt-fr-type").css('display','none')
+    }
+
+    if(sel_alt_types == "Size"){
+        $(".alt-size-area").css('display','block')
+      
+    }else{
+      
+        $(".alt-size-area").css('display','none')
+    }
+
     });
 
 
@@ -102,6 +197,7 @@ $(".select-language").change(function(){
 
         sel_sub_lang =  $('#sub_languageid').find(':selected').attr('data-sub-lang');
         sel_sub_lang_code =  $('#sub_languageid').find(':selected').attr('data-sub-code');
+
         // assetval = $('.asset_obj_val').attr('data-asset-obj-val');
         // Update button text.
         // uploadButton.innerHTML = 'Uploading...';
@@ -255,6 +351,99 @@ $(".select-language").change(function(){
         xhr.send(formData);
 
 });
+
+  // var uploadButton = document.getElementById('submitpostid');
+    function save_alternate_file(event) {
+        var alt_files = document.getElementById('docalternatefile');
+        
+        sel_alt_type =  $('#alt_types').find(':selected').attr('data-opts');
+        
+        
+        
+        // Get the selected files from the input.
+        var files = alt_files.files;
+
+        // Create a new FormData object.
+        var formData = new FormData();
+
+        // Loop through each of the selected files.
+        for (var i = 0; i < files.length; i++) {
+          var file = files[i];
+
+          // // Check the file type.
+          // if (!file.type.match('image.*')) {  continue; }
+
+          // Add the file to the request.
+          formData.append('uploaded_alt_lang_file', file, file.name);
+        }
+
+        // appending csrfmiddlewaretoken and user-id
+        formData.append('csrfmiddlewaretoken', '{{csrf_token}}');
+        formData.append('user','{{request.user.id}}');
+        
+        formData.append('assetcontentid','{{node.pk}}');
+        
+
+        if(sel_alt_type == 'Language' ){
+          sel_alt_lang =  $('#alt_languageid').find(':selected').attr('data-sub-lang');
+          alt_file_type =  $('#alt_languageid').find(':selected').attr('data-sub-code');
+          formData.append('if_alt_file','True');
+          formData.append('alt_file_type','alt_language');
+          formData.append('sel_alt_value',sel_alt_lang);
+        }
+        if(sel_alt_type == 'Format' ){
+          sel_alt_fr_type =  $('.alt-fr-type').find(':selected').attr('data-opts');
+          formData.append('if_alt_file','True');
+          formData.append('sel_alt_value',sel_alt_fr_type);
+          formData.append('alt_file_type','alt_format');
+        }
+        
+        if(!"{{asset_obj}}"){
+            formData.append('asset_obj',assetval);
+        }
+        else{
+            formData.append('asset_obj','{{asset_obj}}');
+        }
+        // Set up the request.
+        xhr = new XMLHttpRequest();
+
+        // Open the connection.
+        xhr.open('POST', "{% url 'add_assetcontent' group_id %}", true);
+
+        // Set up a handler for when the request finishes sucessfully.
+        xhr.onload = function () {
+          if (xhr.status === 200) 
+          {
+            // File(s) uploaded.
+           // if file is not uploaded sucessfully
+            if(xhr.responseText == "UploadError")
+            {
+               alert("Error occurred");
+            }
+            // check if image is not in the list, add it.
+            else if(xhr.responseText )
+            {
+              alert("Alternate file uploaded successfully");
+              location.reload();
+            }
+
+            uploadButton.innerHTML = 'Upload';
+
+            // updating metadata of files, if file is uploaded sucessfully
+            // if(xhr.responseText != "UploadError")
+            // {
+            //   // alert('xhr.responseText != "UploadError"');
+            // }
+          }
+          else
+          {
+            alert('An error occurred!');
+          }
+        };
+
+        // Send the Data.
+        xhr.send(formData);
+      }
 
 function delete_rel_files(sel_sub,rel_type){    
     $.ajax({
