Added configurable variable:hide_bannerpic to render/hide banner pic in the unit player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -21,7 +21,7 @@
     <div class="row group_content">
         <div class="small-12 columns">
             <div class="row">
-                <div class="small-12 columns group_banner"></div>
+                <div class="small-12 columns group_banner {% if hide_bannerpic %}hide{% endif %}"></div>
             </div>
             <div class="row">
                 <div class="small-12 columns group_header">
