--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -281,7 +281,7 @@ This will not be used because now only existing activities will be added.
 <div id="add-lesson-reveal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <h3>Lesson Name</h3>
     <input type="text" id="lesson-name">
-    <select class="activity-lang" name="lan" id="lesson_lang" >
+    <select class="lesson-lang" name="lan" id="lesson_lang" >
                             {% get_language_info_list for LANGUAGES as languages %}
                             
                             {% for language in languages %}
