--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -74,7 +74,7 @@
                             <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a>
                         </li>
                        <li>
-                            <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' %}class="selected"{% endif %}>Activities</a>
+                            <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' or title == 'create_course_pages' %}class="selected"{% endif %}>Activities</a>
                         </li>
                         <li>
                             <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
@@ -102,7 +102,10 @@
                     <div id="group_pages">
                         {% if title == "course_pages" %}
                             {% include "ndf/course_pages.html" %}
+                        {% elif title == "create_course_pages" %}
+                            {% include "ndf/course_page_create_edit.html" %}
                         {% endif %}
+                        
                     </div>
                     <div id="group_elibrary">
                         {% if title == "asset_list" %}
