--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -767,7 +767,7 @@ This will not be used because now only existing activities will be added.
             $('.course-editor-section .activity-name').text(activityName);
 
             getNodeData(activity_id);
-            $('.save_edit_activity').attr('href',"{% url 'course_pages' group_id %}?edit="+ activity_id + "&return=unit_detail")
+            $('.save_edit_activity').attr('href', "{% url 'edit_course_page' group_id 'activity_id' %}".replace('activity_id', activity_id))
             $('.save_edit_activity').attr('data-current-activity-id', activity_id);
         });
 
