--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -43,7 +43,6 @@
                     </form>
                 </div>
 
-                        <label><u>Language</u></label>
                           <select  style="display: none;" class="select-subtitle-langauge" name="lan" id="sub_languageid" tabindex=3 >
                             <option value="">--- Select Language ---</option>
                             {% get_language_info_list for LANGUAGES as languages %}
@@ -59,7 +58,14 @@
                 </div>
                 
                 {% get_relation_node node.pk  'has_alt_content' as alt_lang_rel_node %}
-                {{alt_lang_rel_node}}
+                  {% if alt_lang_rel_node %}
+                      Alternate Files : 
+                    {% for each in  alt_lang_rel_node %} 
+                      <a href="{% url 'assetcontent_detail' group_id asset_obj.pk each.file_id %}" >
+                          {{each.file_name}} &nbsp; &nbsp;
+                      </a>
+                    {% endfor  %} 
+                  {% endif %}
                 
               {%  endif %}
             {%  endif %}
@@ -68,14 +74,22 @@
         </div>
             
         </div>
-          {% get_gstudio_alt_opts as alt_opts %}
+        {% get_gstudio_alt_opts as alt_opts %}
         {% if 'video' in node.if_file.mime_type %}
           {% get_gstudio_alt_size 'video' as size_types %}
           {% get_gstudio_alt_file_formats  'video' as format_types %}
         {% endif %}
+        {% if 'image' in node.if_file.mime_type %}
+          {% get_gstudio_alt_size 'image' as size_types %}
+          {% get_gstudio_alt_file_formats  'image' as format_types %}
+        {% endif %}
+        {% if 'audio' in node.if_file.mime_type %}
+          {% get_gstudio_alt_size 'audio' as size_types %}
+          {% get_gstudio_alt_file_formats  'audio' as format_types %}
+        {% endif %}
         <div class="subtitle_files">
                   <label><u>Upload Alternate File</u></label>
-                    <form class="dropzone" id ="docalternate" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
+                    <form class="dropzone large-6 columns" id ="docalternate" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
                         <input class="alternate-file" type="file" id="docalternatefile" placeholder="" name="doc_altf" />
                         <br>
                     </form>
@@ -132,11 +146,19 @@
 
 
 
+     <div class="row">
+
      {% get_relation_value node.pk 'has_subtitle' as grel_sub %}
      {% for each in grel_sub.grel_node %}
-      {{each.name}} <button type="button" data-sub-id = "{{each.pk}}" class="right orange-button-subtitle delete-subtitle" onclick="delete_rel_files('{{each.pk}}','has_subtitle')">delete subtitle</button></div> <br>
+      <div class="large-6 columns">
+        {{each.name}}  
+      </div>
+       <div class="large-6 columns" >
+        <button type="button" data-sub-id = "{{each.pk}}" class="right orange-button-subtitle delete-subtitle" onclick="delete_rel_files('{{each.pk}}','has_subtitle')">delete subtitle</button> <br>
+         
+       </div>
      {% endfor %}
-
+     </div>
     {% get_relation_value node.pk 'has_transcript' as grel_trans %}
     {% if grel_trans.grel_node.pk %}
       {{grel_trans.grel_node.name}} <button type="button"  class="right orange-button-subtitle delete-transcript" onclick="delete_rel_files('{{grel_trans.grel_node.pk}}','has_transcript')" >delete transcript</button></div> <br>
